FEATURE-1: Added multiple api versions, some improvements and controller unit tests

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=base64:HLjKD0y98AKbxrBAzFTHdCaWiYltbtpaYiG6Cr5VOrc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+API_TOKEN_HEADER=X-QUICK-ORDER-API-TOKEN
+API_TOKEN=Godl!ke1337
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
